# opentypeless

./: .gitattributes  .gitignore  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_hi.md  README_id.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_pl.md  README_pt.md  README_ru.md  README_th.md  README_tr.md  README_vi.md  README_zh.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VISION.md  eslint.config.js  handoff.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
docs/: 2026-05-22-i18n-design.md  2026-05-22-optimization-plan.md  2026-06-13-platform-release-stabilization-spec.md  2026-06-16-open-pr-triage-spec.md  (+9 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: dictionary_io.rs  error.rs  hotkey.rs  lib.rs  linux_x11.rs  main.rs  native_hotkey.rs  pipeline.rs  platform.rs  recording_deadline.rs  selection.rs  tray.rs
src-tauri/src/app_detector/: cache.rs  mod.rs  profiles.rs  registry.rs  types.rs  user_mappings.rs
src-tauri/src/app_detector/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/commands/: app_mappings.rs  ask.rs  backup.rs  config.rs  dictionary.rs  history.rs  llm.rs  misc.rs  mod.rs  stt.rs  translation.rs
src-tauri/src/llm/: cloud.rs  context_policy.rs  mod.rs  model_capabilities.rs  openai.rs  prompt.rs
src-tauri/src/output/: clipboard.rs  keyboard.rs  mod.rs  windows_modifier_guard.rs  windows_sendinput.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/stt/: apple_speech.rs  assemblyai.rs  capabilities.rs  cloud.rs  config.rs  deepgram.rs  managed_audio.rs  mod.rs  volcengine.rs  whisper_compat.rs
src-tauri/src/voice_intent/: executor.rs  guards.rs  mod.rs  normalize.rs  search.rs  types.rs
src-tauri/src/voice_intent/grammar/: en.rs  mod.rs  zh_hans.rs  zh_hant.rs
src-tauri/tests/fixtures/: certified_models.json  context_registry.json  context_same_payload.json  generate_voice_intent_fixtures.mjs  thought_aware.json  voice_intent_en.json  voice_intent_zh_hans.json  voice_intent_zh_hant.json
(+180 files in other folders)
